# getPosefromAcceralationDataofD435i

./: CMakeLists.txt  LICENSE  convert.cpp  convert.hpp  main.cpp
rotefiles/: test0.txt
